--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio de Pedro Garcia, desarrollador web">
+    <meta name="keywords" content="Pedro Garcia, Web, Portfolio, Desarrollador">
+    <meta name="author" content="Pedro Garcia">
+
     <link rel="stylesheet" href="index.css"/>
     <link rel="stylesheet" href="main.css"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
